fixed bug where an extra vertical scrollbar appeared

--- a/styles.scss
+++ b/styles.scss
@@ -34,6 +34,7 @@ main {
   max-width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 // body {
